--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,11 @@
     "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "bitset": "cpp",
+    "ctime": "cpp",
+    "iterator": "cpp",
+    "map": "cpp",
+    "regex": "cpp"
   }
 }
