--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,6 +98,7 @@
     "ctime": "cpp",
     "iterator": "cpp",
     "map": "cpp",
-    "regex": "cpp"
+    "regex": "cpp",
+    "iomanip": "cpp"
   }
 }
