--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,6 +99,13 @@
     "iterator": "cpp",
     "map": "cpp",
     "regex": "cpp",
-    "iomanip": "cpp"
+    "iomanip": "cpp",
+    "bit": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "functional": "cpp",
+    "numeric": "cpp",
+    "random": "cpp",
+    "numbers": "cpp"
   }
 }
